Estruturação e estilização da tela de pagamentos, ajustes visuais tela de login, componetização do logotipo e outros ajustes.

--- a/payfriends-project/src/app/pages/login/login.page.html
+++ b/payfriends-project/src/app/pages/login/login.page.html
@@ -2,9 +2,10 @@
   <section class="payfriends-login">
     <div class="login-wrapper">
       <form action="" class="login-form">
+        <payfriends-logo></payfriends-logo>
+
         <ion-text>
-          <h1>Pay<span>Friends</span></h1>
-          <h2>Bem vindo de volta</h2>
+          <h2 class="main-header">Bem vindo de volta</h2>
         </ion-text>
 
         <ion-item-group mode="md">
