--- a/payfriends-project/src/theme/variables.scss
+++ b/payfriends-project/src/theme/variables.scss
@@ -4,6 +4,9 @@
   --blue: #007DFE;
   --dark-blue: #002D69;
   --gray-text: #2D3540;
+  --gray-text-secondary: #69788C;
   --gray-text-dark: #333333;
+  --gray-zebra-striping: #F5F8FA;
   --montserrat-font: 'Montserrat', sans-serif;
+  --lato-font: 'Lato', sans-serif;
 }
