--- a/payfriends-project/src/theme/variables.scss
+++ b/payfriends-project/src/theme/variables.scss
@@ -7,6 +7,9 @@
   --gray-text-secondary: #69788C;
   --gray-text-dark: #333333;
   --gray-zebra-striping: #F5F8FA;
+  --gray-button: #E6ECF0;
   --montserrat-font: 'Montserrat', sans-serif;
   --lato-font: 'Lato', sans-serif;
+  --input-border: #CFDCE5;
+  --roboto-font: 'Roboto', sans-serif;
 }
