--- a/payfriends-project/src/app/pages/meus-pagamentos/meus-pagamentos.page.scss
+++ b/payfriends-project/src/app/pages/meus-pagamentos/meus-pagamentos.page.scss
@@ -32,7 +32,11 @@ ion-content {
     width: 100%;
     max-width: 1344px;
     margin: 0 auto;
-    padding: 65px 16px;
+    padding: 65px 0;
+
+    @media only screen and (max-width: 1344px) {
+      padding: 65px 16px;
+    }
 
     h1 {
       margin: 0;
@@ -40,7 +44,9 @@ ion-content {
     }
 
     .payments-wrapper {
+      width: 100%;
       @include flexbox(flex-end, center, column);
+
       @media only screen and (max-width: 768px) {
         margin-top: 16px;
       }
@@ -61,6 +67,41 @@ ion-content {
         box-shadow: 0px 2px 4px rgba(4, 38, 82, .06);
         border-radius: 8px;
         overflow: hidden;
+
+        .payments-filter {
+          height: 64px;
+          @include flexbox(center, space-between, row);
+          padding: 0 14px;
+
+          .filter-by-user {
+            @include flexbox(center, flex-start, row);
+
+            ion-item.borded-item {
+              border: 1px solid var(--input-border);
+              --min-height: 32px;
+              height: 32px;
+              width: 215px;
+              border-radius: 6px;
+              --padding-start: 6px;
+              --inner-padding-end: 6px;
+            }
+
+            ion-button {
+              height: 28px;
+              margin: 0 0 0 10px;
+              width: 65.43px;
+            }
+          }
+        }
+
+        .payments-header {
+          width: 100%;
+          border-bottom: 2px solid #CFDCE5;
+          height: 54px;
+          @include flexbox(center, flex-start, row);
+
+          ion-grid { padding: 0; --ion-grid-column-padding: 12px; }
+        }
 
         .payments-content {
           width: 100%;
