--- a/payfriends-project/src/theme/variables.scss
+++ b/payfriends-project/src/theme/variables.scss
@@ -8,8 +8,11 @@
   --gray-text-dark: #333333;
   --gray-zebra-striping: #F5F8FA;
   --gray-button: #E6ECF0;
+  --gray-form-title: #373737;
+  --gray-input-border:  #DADADA;
   --montserrat-font: 'Montserrat', sans-serif;
   --lato-font: 'Lato', sans-serif;
   --input-border: #CFDCE5;
   --roboto-font: 'Roboto', sans-serif;
+  --black: #000;
 }
