--- a/payfriends-project/src/app/pages/meus-pagamentos/meus-pagamentos.page.html
+++ b/payfriends-project/src/app/pages/meus-pagamentos/meus-pagamentos.page.html
@@ -1,30 +1,33 @@
-<ion-header
-mode="md"
-class="ion-no-border">
-  <ion-toolbar>
-    <div class="payfriends-toolbar">
-      <payfriends-logo
-      slot="start"
-      [theme]="'white'">
-      </payfriends-logo>
-  
-      <ion-avatar slot="end">
-        <img 
-          src="./../../../assets/illustrations/ellipse-2.png"
-          alt="Picture"
-          title="Person name"
-        />
-      </ion-avatar>
-    </div>
-  </ion-toolbar>
-</ion-header>
+
 
 <ion-content>
+  <ion-header
+  mode="md"
+  class="ion-no-border">
+    <ion-toolbar>
+      <div class="payfriends-toolbar">
+        <payfriends-logo
+        slot="start"
+        [theme]="'white'">
+        </payfriends-logo>
+    
+        <ion-avatar slot="end">
+          <img 
+            src="./../../../assets/illustrations/ellipse-2.png"
+            alt="Picture"
+            title="Person name"
+          />
+        </ion-avatar>
+      </div>
+    </ion-toolbar>
+  </ion-header>
+
   <section class="payfriends-meus-pagamentos">
     <h1 class="main-header">Meus pagamentos</h1>
 
     <div class="payments-wrapper">
       <ion-button
+       (click)="adicionarPagamento()"
         fill="solid"
         shape="round"
         class="form-btn"
@@ -35,7 +38,6 @@ class="ion-no-border">
 
       <div class="payments-table">
         <div class="payments-filter">
-          <!-- FILTER BY USER -->
           <div class="filter-by-user">
             <ion-item
             mode="md"
@@ -64,8 +66,14 @@ class="ion-no-border">
 
           <div class="filter-visualization">
             <div class="filter-itens-length">
-              <!-- LABEL -->
-              <!-- SELECT -->
+              <ion-text>
+                <p>Exibir</p>
+              </ion-text>
+
+              <select name="" id="" value="5">
+                <option value="5">5</option>
+                <option value="10">10</option>
+              </select>
             </div>
 
             <div class="filter-pagination">
@@ -77,7 +85,7 @@ class="ion-no-border">
         <div class="payments-header">
           <ion-grid>
             <ion-row>
-              <ion-col size="2">
+              <ion-col size-lg="2">
                 <div class="payment-info">
                   <ion-text>
                     <p class="header-text">Usuário</p>
@@ -121,52 +129,59 @@ class="ion-no-border">
         </div>
 
         <div class="payments-content">
-          <div class="payment" *ngFor="let item of [1,2,3,4,5, 6]">
+          <div class="payment" *ngFor="let payment of payments">
             <ion-grid>
               <ion-row>
-                <ion-col size="2">
+                <ion-col size="12" size-lg="2">
                   <div class="payment-info">
                     <ion-text>
-                      <p class="primary-text">Claudia</p>
-                      <p class="secondary-text">@claudia</p>
+                      <p class="primary-text">{{ payment.nome }}</p>
+                      <p class="secondary-text">{{ payment.user }}</p>
                     </ion-text>
                   </div>
                 </ion-col>
 
-                <ion-col size="2">
+                <ion-col size="12" size-lg="2">
                   <div class="payment-info">
                     <ion-text>
-                      <p class="primary-text">Professor 1</p>
+                      <p class="primary-text">{{ payment.titulo }}</p>
                     </ion-text>
                   </div>
                 </ion-col>
 
-                <ion-col size="2">
+                <ion-col size="12" size-lg="2">
                   <div class="payment-info">
                     <ion-text>
-                      <p class="primary-text">23 Jun 2020</p>
-                      <p class="secondary-text">11:00 AM</p>
+                      <p class="primary-text">{{ payment.data }}</p>
+                      <p class="secondary-text">{{ payment.hora }}</p>
                     </ion-text>
                   </div>
                 </ion-col>
 
-                <ion-col size="2">
+                <ion-col size="12" size-lg="2">
                   <div class="payment-info">
                     <ion-text>
-                      <p class="primary-text">R$ 100,00</p>
+                      <p class="primary-text">{{ payment.valor }}</p>
                     </ion-text>
                   </div>
                 </ion-col>
 
                 <ion-col size="1">
-                  <div class="payment-info">
-                    <ion-checkbox></ion-checkbox>
+                  <div class="payment-info hasPaid">
+                    <ion-text>
+                      <p class="primary-text">
+                        <span>{{ payment.pago ? 'Pago' : 'Não pago' }}</span> <ion-checkbox [(ngModel)]="payment.pago"></ion-checkbox>
+                      </p>
+                    </ion-text>
                   </div>
                 </ion-col>
 
-                <ion-col>
+
+                <!-- BOTÕES DESK E MOBILE-->
+                <ion-col class="hidden-mobile">
                   <div class="payment-info only-icons">
                     <ion-button
+                    (click)="editarPagamento()"
                     class="edit-btn"
                     title="Clique para editar"
                     fill="clear"
@@ -175,11 +190,34 @@ class="ion-no-border">
                     </ion-button>
 
                     <ion-button
+                    (click)="excluirPagamento()"
                     class="remove-btn"
-                    title="Clique para remover"
+                    title="Clique para excluir"
                     fill="clear"
                     mode="ios">
-                      <img src="./../../../assets/icon/close.png" alt="Remover" title="Clique para remover">
+                      <img src="./../../../assets/icon/close.png" alt="Remover" title="Clique para excluir">
+                    </ion-button>
+                  </div>
+                </ion-col>
+
+                <ion-col size="12" class="hidden-desk">
+                  <div class="payment-info only-btns">
+                    <ion-button
+                    (click)="editarPagamento()"
+                    class="form-btn gray"
+                    title="Clique para editar"
+                    fill="solid"
+                    mode="ios">
+                      Editar
+                    </ion-button>
+
+                    <ion-button
+                    (click)="excluirPagamento()"
+                    class="form-btn"
+                    title="Clique para excluir"
+                    fill="solid"
+                    mode="ios">
+                      Excluir
                     </ion-button>
                   </div>
                 </ion-col>
