--- a/payfriends-project/src/theme/scss/ion-components/ion-inputs.scss
+++ b/payfriends-project/src/theme/scss/ion-components/ion-inputs.scss
@@ -11,4 +11,16 @@ ion-input {
     --padding-top: 0;
     --padding-bottom: 0;
   }
+
+  &.form-input {
+    color: var(--gray-text-secondary);
+    --placeholder-color: var(--gray-text-secondary);
+    --placeholder-font-weight: 400;
+    --placeholder-opacity: 1;
+    font-family: var(--roboto-font);
+    font-weight: 400;
+    --padding-top: 0;
+    --padding-bottom: 0;
+    font-size: 16px;
+  }
 }
