--- a/payfriends-project/src/app/pages/meus-pagamentos/meus-pagamentos.page.html
+++ b/payfriends-project/src/app/pages/meus-pagamentos/meus-pagamentos.page.html
@@ -44,11 +44,14 @@
             class="borded-item"
             lines="none">
               <ion-input
+              name="user"
+              [(ngModel)]="user"
+              (ngModelChange)="searchByUser()"
               mode="md"
               type="text"
               inputmode="text"
               class="search-input"
-              placeholder="Pesquisar por usuário">
+              placeholder="Pesquisar por @">
               </ion-input>
             </ion-item>
 
@@ -87,7 +90,7 @@
             <ion-row>
               <ion-col size-lg="2">
                 <div class="payment-info">
-                  <ion-text>
+                  <ion-text (click)="orderBy('nome')" class="can-order">
                     <p class="header-text">Usuário</p>
                   </ion-text>
                 </div>
@@ -95,7 +98,7 @@
 
               <ion-col size="2">
                 <div class="payment-info">
-                  <ion-text>
+                  <ion-text (click)="orderBy('nome')" class="can-order">
                     <p class="header-text">Título</p>
                   </ion-text>
                 </div>
@@ -103,7 +106,7 @@
 
               <ion-col size="2">
                 <div class="payment-info">
-                  <ion-text>
+                  <ion-text (click)="orderBy('nome')" class="can-order">
                     <p class="header-text">Data</p>
                   </ion-text>
                 </div>
@@ -111,7 +114,7 @@
 
               <ion-col size="2">
                 <div class="payment-info">
-                  <ion-text>
+                  <ion-text (click)="orderBy('nome')" class="can-order">
                     <p class="header-text">Valor</p>
                   </ion-text>
                 </div>
@@ -119,7 +122,7 @@
 
               <ion-col size="2">
                 <div class="payment-info">
-                  <ion-text>
+                  <ion-text (click)="orderBy('nome')" class="can-order">
                     <p class="header-text">Pago</p>
                   </ion-text>
                 </div>
@@ -166,7 +169,17 @@
                   </div>
                 </ion-col>
 
-                <ion-col size="1">
+                <ion-col size="1" class="hidden-mobile">
+                  <div class="payment-info">
+                    <ion-text>
+                      <p class="primary-text">
+                        <ion-checkbox [(ngModel)]="payment.pago"></ion-checkbox>
+                      </p>
+                    </ion-text>
+                  </div>
+                </ion-col>
+
+                <ion-col size="12" class="hidden-desk">
                   <div class="payment-info hasPaid">
                     <ion-text>
                       <p class="primary-text">
@@ -181,7 +194,7 @@
                 <ion-col class="hidden-mobile">
                   <div class="payment-info only-icons">
                     <ion-button
-                    (click)="editarPagamento()"
+                    (click)="editarPagamento(payment)"
                     class="edit-btn"
                     title="Clique para editar"
                     fill="clear"
@@ -190,7 +203,7 @@
                     </ion-button>
 
                     <ion-button
-                    (click)="excluirPagamento()"
+                    (click)="excluirPagamento(payment)"
                     class="remove-btn"
                     title="Clique para excluir"
                     fill="clear"
@@ -203,7 +216,7 @@
                 <ion-col size="12" class="hidden-desk">
                   <div class="payment-info only-btns">
                     <ion-button
-                    (click)="editarPagamento()"
+                    (click)="editarPagamento(payment)"
                     class="form-btn gray"
                     title="Clique para editar"
                     fill="solid"
@@ -212,7 +225,7 @@
                     </ion-button>
 
                     <ion-button
-                    (click)="excluirPagamento()"
+                    (click)="excluirPagamento(payment)"
                     class="form-btn"
                     title="Clique para excluir"
                     fill="solid"
@@ -223,6 +236,10 @@
                 </ion-col>
               </ion-row>
             </ion-grid>
+          </div>
+
+          <div class="hasnt-user" *ngIf="hasUser">
+            <ion-text>Não existem usuários com este @</ion-text>
           </div>
         </div>
       </div>
