--- a/payfriends-project/src/app/pages/meus-pagamentos/modal/adicionar-pagamento/adicionar-pagamento.page.html
+++ b/payfriends-project/src/app/pages/meus-pagamentos/modal/adicionar-pagamento/adicionar-pagamento.page.html
@@ -5,7 +5,20 @@
     <div class="form-content">
       <ion-grid>
         <ion-row>
-          <ion-col size="6">
+          <ion-col size="12" size-md="6">
+            <ion-item
+            lines="none">
+              <ion-input
+              [value]="payment.nome"
+              class="form-input"
+              mode="ios"
+              placeholder="Título*">
+                
+              </ion-input>
+            </ion-item>
+          </ion-col>
+
+          <ion-col size="12" size-md="6">
             <ion-item
             lines="none">
               <ion-input
@@ -17,7 +30,7 @@
             </ion-item>
           </ion-col>
 
-          <ion-col size="6">
+          <ion-col size="12" size-md="6">
             <ion-item
             lines="none">
               <ion-input
@@ -29,19 +42,7 @@
             </ion-item>
           </ion-col>
 
-          <ion-col size="6">
-            <ion-item
-            lines="none">
-              <ion-input
-              class="form-input"
-              mode="ios"
-              placeholder="Título*">
-                
-              </ion-input>
-            </ion-item>
-          </ion-col>
-
-          <ion-col size="6">
+          <ion-col size="12" size-md="6">
             <ion-item
             lines="none">
               <ion-input
